MDEV-5299 crash at using show index